--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234567
 
 logging.level.root=info
-logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+logging.level.org.springframework.jdbc.core.JdbcTemplate=TRACE
 logging.level.web=TRACE
 
 
